--- a/config/rclone/rclone.conf
+++ b/config/rclone/rclone.conf
@@ -7,3 +7,11 @@ location_constraint = eu-west-2
 acl = authenticated-read
 server_side_encryption = aws:kms
 
+[setswapservice-dev-rawreservations]
+type = s3
+provider = AWS
+env_auth = true
+region = eu-west-2
+location_constraint = eu-west-2
+acl = authenticated-read
+
